# ICM

./: .gitignore  B200_RESUME_CHECKPOINT.md  CLAUDE.md  DISPATCH_GAP_ANALYSIS.md  GPU_DEBUG_PLAN.md  HANDOFF.md  Makefile  OPTIMIZATION_GUIDE.md  README.md  REPORT.md  RESULTS.md  SPRINT_CALIBRATION_AND_READINESS_DAG.md  SPRINT_HYBRID_COST_MODEL_VALIDATION_DAG.md  SPRINT_M3PRO_DOCS_DAG.md  STATUS_ORIENTATION.md  accuracy_zen4.csv  analyze_calibration.py  b200_final_clean.txt  b200_final_cufft.txt  b200_final_cufft_only.txt  b200_results_full.txt  b200_runtime_vs_n.csv  b200_vkfft_final.txt  bench.c  bench_crt  bench_cuda.cu  bench_grid_full.txt  bench_grid_par.txt  bench_grid_quick.txt  bench_grid_zen4_parallel.txt  bench_grid_zen4_serial.txt  bench_topk.c  calibrate_B.c  contour_zen4_parallel_q256.csv  contour_zen4_serial_q256.csv  gpu_heatmap_new.csv  heatmap_log.txt  icm.h  icm_avx2.c  icm_avx512.c  (+10 more)
bench/: bench.c  bench_gpu.cu
paper/: icm_paper.tex  icm_paper_revised.tex  references.bib
patches/: anomaly_fix.patch  cufft_524k_fix.patch  gpu_monotonicity_fix.patch  oom_fix.patch  verify_fix.patch  verify_regression_findings.md
python/: README.md  pyproject.toml  setup.py
python/icm/: __init__.py
python/tests/: test_icm.py
results/: B_probe_zen4.txt  accuracy_m3max_20260718.csv  accuracy_vs_q.csv  b200_B_validation.csv  b200_calib_spotcheck_20260718.h  b200_final_benchmarks.txt  b_optimal_report_zen4.md  b_optimal_sweep_zen4.csv  bench_grid_m3pro_parallel.txt  bench_grid_m3pro_parallel_2026-07-20.txt  bench_grid_m3pro_serial.txt  bench_grid_zen4_parallel.txt  (+31 more)
(+89 files in other folders)
